--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "private": true,
   "dependencies": {
     "admin-lte": "^2.4.3",
+    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "vue": "^2.5.16",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "^2.1.4",
+    "webpack-manifest-plugin": "^2.0.3"
   }
 }
